<resources>
    <string name="app_name">柠檬秀</string>
    <string name="permission_label">权限申请</string>
    <string name="permission_camera">是否允许用户调用相机进行拍照或录制视频？</string>
    <string name="shouye_query">连衣裙</string>
    <string name="adress_list">北京</string>
    <string name="json_is_null">数据为空！</string>
    <string name="login_title_text">登录</string>
    <string name="login_user_text">请输入账号</string>
    <string name="login_pwd_text">请输入密码</string>
    <string name="login_forgot_pwd">忘记密码?</string>
    <string name="login_forgot_title">忘记密码</string>
    <string name="login_find_pwd">找回密码</string>
    <string name="login_register">注册直播商城</string>
    <string name="login_other">建议微信一键登录</string>
    <string name="register_title_text">注册</string>
    <string name="welcome_to_login">点击进入</string>
    <string name="publish_product_text">发布宝贝</string>
    <string name="publish_product_detail">宝贝描述</string>
    <string name="register_at_once">注册</string>
    <string name="register_user_name">用户名</string>
    <string name="register_pwd">登录密码</string>
    <string name="register_pwd_ok">确认密码</string>
    <string name="register_phone">手机号码</string>
    <string name="register_code">6位数字</string>
    <string name="register_get_code">获取验证码</string>
    <string name="register_agree_text">我已阅读并同意\n《服务协议》</string>
    <string name="login_error1">请填写手机号码！</string>
    <string name="login_error2">请填写用户名！</string>
    <string name="login_error3">请填写确认密码！</string>
    <string name="login_error4">请填写登录密码！</string>
    <string name="login_error5">请填写验证码！</string>
    <string name="login_error6">密码和确认密码不一致！</string>
    <string name="login_error7">加载数据失败，请稍后再试！</string>
    <string name="login_protocol_title">服务协议</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="tencent_tls_ui_independentLoginTitle">用户名登录</string>
    <string name="tencent_tls_ui_independentRegisterTitle">用户名注册</string>
    <string name="title_living">是否回到上次直播</string>
    <string name="action_settings">settings</string>
    <string name="exit_app">再按一次退出</string>
    <string name="btn_take_photo">拍照</string>
    <string name="btn_pic_photo">从手机相册选择</string>
    <string name="btn_return_home">返回首页</string>
    <string name="btn_return">返回</string>
    <string name="btn_save">保存</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_refuse">拒绝</string>
    <string name="btn_agree">同意</string>
    <string name="btn_sure">确定</string>
    <string name="btn_close">关闭</string>
    <string name="error_code_prefix">错误码：</string>
    <string name="live_unknown">未知</string>
    <string name="live_titile">最新直播</string>
    <string name="dialog_members_tips">邀请互动连线（最多可与三个成员进行互动直播）</string>
    <string name="send">发送</string>
    <string name="invite_dialog_tips">主播邀请您与他进行互动直播</string>
    <string name="live_end_ask_tips">确定结束直播?</string>
    <string name="live_end_tips">直播结束啦</string>
    <string name="live_time_tips">直播时长</string>
    <string name="live_members_tips">观看人数</string>
    <string name="live_admires_tips">获赞数量</string>
    <string name="live_report_tips">请选择您的举报原因</string>
    <string name="live_report_dirty">垃圾营销</string>
    <string name="live_report_false">不实信息</string>
    <string name="live_report_virus">有害信息</string>
    <string name="live_report_illegal">违法信息</string>
    <string name="live_report_yellow">淫秽信息</string>
    <string name="live_host_leave">主播可能暂时离开</string>
    <string name="live_btn_par">par</string>
    <string name="live_btn_record">录制</string>
    <string name="live_btn_push">开启推流</string>
    <string name="live_btn_stop_push">关闭推流</string>
    <string name="live_btn_stop_record">停录</string>
    <string name="clip_title">点击地址复制到黏贴版</string>
    <string name="clip_tip">地址复制到黏贴版上了</string>
    <string name="profile_title">编辑个人信息</string>
    <string name="profile_icon">头像</string>
    <string name="profile_nickname">昵称</string>
    <string name="profile_sign">签名</string>
    <string name="profile_set">设置</string>
    <string name="profile_about">关于随心播</string>
    <string name="btn_login_out">退出登录</string>
    <string name="tip_force_offline">您的帐号已在其它地方登陆</string>
    <string name="set_live_animator">渐隐动画</string>
    <string name="set_log_level">日志等级</string>
    <string name="set_sdk_version">SDK版本</string>
    <string name="edit_error">修改失败</string>
    <string name="publish_already_launch_avRoom">wait!</string>
    <string name="publish_photo_take">拍照</string>
    <string name="publish_photo_album">相册</string>
    <string name="publish_need_photo_tips">从未发起过图片，请选择一张作为直播封面</string>
    <string name="publish_wait_uploading">请等待封面上传完成</string>
    <string name="publish_upload_success">上传封面成功</string>
    <string name="publish_photo_make_sure_tips">请添加一张照片</string>
    <string name="publish_photo_make_sure_title">请输入图片标题</string>
    <string name="publish_create_room_failed">创建房间失败</string>
    <string name="publish_upload_cover_failed">上传封面失败</string>
    <string name="publish_photo_success">发布图片成功</string>
    <string name="text_continue">继续</string>
    <string name="text_publish">开始直播</string>
    <string name="text_live_preview">发布直播</string>
    <string name="text_photo_preview">发布照片</string>
    <string name="text_live_title_input">请输入直播标题</string>
    <string name="text_photo_title_input">你的照片你做主</string>
    <string name="text_live_open_lbs">开启位置</string>
    <string name="text_live_close_lbs">不显示位置</string>
    <string name="text_live_location">正在定位中</string>
    <string name="text_live_lbs_fail">定位失败</string>
    <string name="text_live_lbs_unknown">未知</string>
    <string name="text_live_default_title">我的直播我做主</string>
    <string name="text_start_push">开启推流</string>
    <string name="text_record_info">开始录制后直播视频自动录制，并可以进行回放</string>
    <string name="text_live_all_see">所有人可看</string>
    <string name="text_live_share">同步到</string>
    <string name="text_live">正在直播>></string>
    <string name="text_live_add_title_tips">给你的直播设置一个满意的封面</string>
    <string name="text_live_admire_limit">点赞过于频繁</string>
    <string name="tip_no_permission">权限不足</string>
    <string name="host_sign">我的签名就是把我的世界直播给你们</string>
    <string name="host_phone">iPhone6S Plus</string>
    <string name="host_funs">粉丝数:9090</string>
    <string name="host_follow">关注:7089</string>
    <string name="host_admire">赞:11.3w</string>
    <string name="ping_ing">测速中</string>
    <string name="ping_progress">测速进度</string>
    <string name="ping_speed_test">网络测速</string>
    <string name="ping_start">开始测速</string>
    <string name="ping_no_server">获取测速列表失败，请稍后重试</string>
    <string name="ping_time">平均时延</string>
    <string name="ping_miss">丢包率</string>
    <string name="ping_cancel">取消</string>
    <string name="ping_TEL">电信</string>
    <string name="ping_CMCC">移动</string>
    <string name="ping_CNC">联通</string>
    <string name="ping_SH">上海</string>
    <string name="ping_SZ">深圳</string>
    <string name="ping_CD">成都</string>
    <string name="ping_TJ">天津</string>
    <string name="ping_NJ">南京</string>
    <string name="ping_HZ">杭州</string>
    <string name="ping_GZ">广州</string>
    <string name="friends_store_title">好友店铺</string>
    <string name="friends_new">新朋友</string>
    <string name="friends_conversation_list">会话列表</string>
    <string name="friends_info_title">详细资料</string>
    <string name="friends_store_search">搜索</string>
    <string name="friends_store_liveing">正在直播</string>
    <string name="mine_fragment_title">我的</string>
    <string name="my_store">我的店铺</string>
    <string name="contact_coustomer">联系客服</string>
    <string name="after_sale_management">售后管理</string>
    <string name="mine_fans_title">粉丝</string>
    <string name="mine_my_money">柠檬币</string>
    <string name="mine_attention_title">关注</string>
    <string name="mine_order">我的订单</string>
    <string name="mine_look_all_order">查看全部订单</string>
    <string name="mine_wait_pay">待付款</string>
    <string name="mine_wait_receive">待收货</string>
    <string name="mine_wait_send">待发货</string>
    <string name="mine_wait_returning">退款中</string>
    <string name="mine_wait_comment">待评价</string>
    <string name="mine_return_shop">退款/售后</string>
    <string name="mine_shop_cart">购物车</string>
    <string name="add_product_title">添加商品标题</string>
    <string name="product_sort">商品分类</string>
    <string name="product_price">商品价格</string>
    <string name="product_storege">现有库存</string>
    <string name="product_transportation_fee">运费</string>
    <string name="product_descrption">宝贝描述</string>
    <string name="product_destination">发货地</string>
    <string name="mine_my_shop">我的店铺</string>
    <string name="mine_account_detail">账单明细</string>
    <string name="mine_collection">收藏</string>
    <string name="mine_shop_history">足迹</string>
    <string name="mine_fans">粉丝</string>
    <string name="mine_attention">关注</string>
    <string name="mine_shop_number">0</string>
    <string name="mine_money_today">今日成交额</string>
    <string name="mine_sold_good">已售商品</string>
    <string name="mine_order_today">今日订单</string>
    <string name="mine_push_product">发布宝贝</string>
    <string name="mine_trade_manager">交易管理</string>
    <string name="mine_shop_manager">商品管理</string>
    <string name="mine_contact_service">联系客服</string>
    <string name="mine_after_sale">售后管理</string>
    <string name="mine_look_history">浏览足迹</string>
    <string name="mine_edit">编辑</string>
    <string name="mine_address_title">地址管理</string>
    <string name="mine_address_add">新增地址</string>
    <string name="mine_address_delete">删除地址</string>
    <string name="mine_address_change">修改地址</string>
    <string name="mine_address_error1">请填写收货人</string>
    <string name="mine_address_error2">请填写电话号码</string>
    <string name="mine_address_error3">请选择省市区</string>
    <string name="mine_address_error4">请填写详细地址</string>
    <string name="mine_all_select">全选</string>
    <string name="mine_calculate_price">结算</string>
    <string name="mine_calculate_all">合计：</string>
    <string name="mine_cart_number">商品数量不能小于1</string>
    <string name="mine_cart_delete">删除商品</string>
    <string name="mine_cart_over">完成</string>
    <string name="mine_cart_select_good">请选择商品</string>
    <string name="mine_setting">设置</string>
    <string name="mine_person_info">个人资料</string>
    <string name="mine_user_reback">给个建议</string>
    <string name="mine_number_safe">账号安全</string>
    <string name="mine_push_setting">推送设置</string>
    <string name="mine_invite_friend">邀请好友</string>
    <string name="mine_clear_junk">清理缓存</string>
    <string name="mine_user_return">用户反馈</string>
    <string name="mine_about_us">关于我们</string>
    <string name="mine_black_list">黑名单</string>
    <string name="mine_login_out">退出登录</string>
    <string name="mine_info_avatar">头像</string>
    <string name="mine_user_name">用户名</string>
    <string name="mine_live_code">柠檬ID</string>
    <string name="mine_user_sex">性别</string>
    <string name="mine_user_age">年龄</string>
    <string name="mine_user_home">家乡</string>
    <string name="mine_user_profession">职业</string>
    <string name="mine_user_address">收货地址</string>
    <string name="mine_receive_user">收货人</string>
    <string name="mine_province">省市区</string>
    <string name="mine_detail_address">详细地址</string>
    <string name="wait_for_pay">待付款</string>
    <string name="wait_for_send">待发货</string>
    <string name="already_for_send">已发货</string>
    <string name="reback_for_money_ing">退款中</string>
    <string name="wait_for_comment">待评价</string>
    <string name="follow_for_trans_news">物流跟踪</string>
    <string name="orders">订单</string>
    <string name="publish_now">立即发布</string>
    <string name="change_info_simple_job">修改职业</string>
    <string name="change_info_simple_job_hint">您的职业</string>
    <string name="change_info_simple_username">修改用户名</string>
    <string name="change_info_simple_username_hint">请输入用户名(最多20个字)</string>
</resources>