<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background1"
    android:id="@+id/ll_rootView"
    >
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_width3"
        android:background="@color/line_color2"
        android:layout_marginTop="@dimen/activity_padding_margin8"
        />
    <RelativeLayout
        android:id="@+id/rl_user_avatar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/circle_radius2"
        android:background="@color/white"
        >
        <TextView
            style="@style/setting_text1"
            android:text="@string/mine_info_avatar"
            />
        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/iv_user_avatar"
            android:layout_width="@dimen/circle_radius1"
            android:layout_height="@dimen/circle_radius1"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/activity_padding_margin10"
            android:layout_centerVertical="true"
            fresco:roundAsCircle="true"
            fresco:placeholderImage="@mipmap/icon_qq_img"
            android:scaleType="centerCrop"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:textColor="#aa4b4a4a"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:layout_marginRight="@dimen/_15sp"
            android:drawableRight="@drawable/jiantouyou"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_width3"
        android:background="@color/line_color2"
        android:layout_marginLeft="@dimen/activity_padding_margin8"
        />
    <RelativeLayout
        android:id="@+id/rl_user_name"
        style="@style/setting_button"
        >
        <TextView
            style="@style/setting_text1"
            android:text="@string/mine_user_name"
            />
        <TextView
            android:id="@+id/tv_user_name"
            style="@style/setting_text2"
            android:drawableRight="@mipmap/icon_right_shape"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_width3"
        android:background="@color/line_color2"
        android:layout_marginLeft="@dimen/activity_padding_margin8"
        />
    <RelativeLayout
        android:id="@+id/rl_live_code"
        style="@style/setting_button"
        >
        <TextView
            style="@style/setting_text1"
            android:text="@string/mine_live_code"
            />
        <TextView
            android:id="@+id/tv_live_code"
            style="@style/setting_text2"
            android:drawableRight="@mipmap/icon_right_shape"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_width3"
        android:background="@color/line_color2"
        android:layout_marginLeft="@dimen/activity_padding_margin8"
        />
    <RelativeLayout
        android:id="@+id/rl_user_sex"
        style="@style/setting_button"
        >
        <TextView
            style="@style/setting_text1"
            android:text="@string/mine_user_sex"
            />
        <TextView
            android:id="@+id/tv_user_sex"
            style="@style/setting_text2"
            android:drawableRight="@mipmap/icon_right_shape"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_width3"
        android:background="@color/line_color2"
        android:layout_marginLeft="@dimen/activity_padding_margin8"
        />
    <RelativeLayout
        android:id="@+id/rl_user_age"
        style="@style/setting_button"
        >
        <TextView
            style="@style/setting_text1"
            android:text="@string/mine_user_age"
            />
        <TextView
            android:id="@+id/tv_user_age"
            style="@style/setting_text2"
            android:drawableRight="@mipmap/icon_right_shape"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_width3"
        android:background="@color/line_color2"
        android:layout_marginLeft="@dimen/activity_padding_margin8"
        />
    <RelativeLayout
        android:id="@+id/rl_user_home"
        style="@style/setting_button"
        >
        <TextView
            style="@style/setting_text1"
            android:text="@string/mine_user_home"
            />
        <TextView
            android:id="@+id/tv_user_home"
            style="@style/setting_text2"
            android:drawableRight="@mipmap/icon_right_shape"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_width3"
        android:background="@color/line_color2"
        android:layout_marginLeft="@dimen/activity_padding_margin8"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_width3"
        android:background="@color/line_color2"
        android:layout_marginTop="@dimen/activity_padding_margin8"
        />
    <RelativeLayout
        android:id="@+id/rl_user_profession"
        style="@style/setting_button"
        >
        <TextView
            style="@style/setting_text1"
            android:text="@string/mine_user_profession"
            />
        <TextView
            android:id="@+id/tv_user_profession"
            style="@style/setting_text2"
            android:drawableRight="@mipmap/icon_right_shape"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_width3"
        android:background="@color/line_color2"
        android:layout_marginLeft="@dimen/activity_padding_margin8"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_width3"
        android:background="@color/line_color2"
        android:layout_marginLeft="@dimen/activity_padding_margin8"
        />
    <RelativeLayout
        android:id="@+id/rl_user_address"
        style="@style/setting_button"
        >
        <TextView
            style="@style/setting_text1"
            android:text="@string/mine_user_address"
            />
        <TextView
            android:id="@+id/tv_user_address"
            style="@style/setting_text2"
            android:drawableRight="@mipmap/icon_right_shape"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_width3"
        android:background="@color/line_color2"
        />


</LinearLayout>